@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-07T01:09:59Z",
+  "timestamp" : "2025-07-12T01:09:31Z",
   "count_outdated" : 549,
   "uniques_outdated" : 375,
-  "count" : 555,
-  "uniques" : 381,
+  "count" : 556,
+  "uniques" : 382,
   "clones" : [
     {
       "timestamp": "2025-06-28T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2025-07-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
