@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 6,
+  "count": 7,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2025-06-28T00:00:00Z",
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2025-07-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-11T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
